<?xml version="1.0"?>
<package format="2">
  <name>killer_tomatoes</name>
  <version>0.0.1</version>
  <description>ROS game loosely inspired from the Killer Tomatoes series</description>

  <maintainer email="vladimir.kubelka.1@ulaval.ca">Vladimir Kubelka</maintainer>
  <maintainer email="francois.pomerleau@norlab.ulaval.ca">Francois Pomerleau</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
